--- a/less/variables.less
+++ b/less/variables.less
@@ -1,15 +1,5 @@
-// @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
+@standardBackground: "../images/dark-linen.png";
 
-//@standardBackground: "../images/beach.jpg";
-//@standardBackground: "../images/blueprint.png";
-//@standardBackground: "../images/bookeh.jpg";
-//@standardBackground: "../images/dark-linen.png";
-//@standardBackground: "../images/filthy-tile.jpg";
-//@standardBackground: "../images/grey_wash_wall.png";
-//@standardBackground: "../images/light-linen.png";
-//@standardBackground: "../images/navy_blue.png";
-@standardBackground: "../images/red-blur.jpg";
-//@standardBackground: "../images/red-mesh.jpg";
 @shadowColor: rgba(0, 0, 0, 0.4);
 //@font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
 @font: normal 11px "Lato", sans-serif;
@@ -17,7 +7,7 @@
 @fontWeightNormal: 300;
 @fontWeightBold: 400;
 @borderRadius: 6px;
-// @textShadow: 0 0 0.5rem #333;
+
 @textShadowLight: 0 0.1rem 0.2rem #333;
 @textShadowDark: 0 0 0.5rem #333;
 @lightFontColor: #ccc;
