--- a/css/flipclock.css
+++ b/css/flipclock.css
@@ -144,6 +144,7 @@
     text-shadow: 0 1px 2px #000;
     text-align: center;
     background-color: #333;
+    background-color: #222;
     border-radius: 6px;
     font-size: 70px;
 }
