--- a/less/main.less
+++ b/less/main.less
@@ -8,16 +8,10 @@ body {
   height: 100%;
   min-height: 600px;
   text-align: center;
-  background: url(@standardBackground) top center;
   -webkit-font-smoothing: antialiased;
-  transition: background 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   font-size: 62.5%;
-  font: @font;
-  font-weight: @fontWeightNormal;
-  text-shadow: @textShadowLight;
-  color: @lightFontColor;
-  transition: color 0.5s ease;
- 
+  transition: color 0.8s ease;
+
   > #wrapper {
     position: absolute;
     width: 100%;
@@ -25,6 +19,13 @@ body {
     padding: 0;
     top: 0;
     bottom: 0;
+    // these style have to be applied when reseting the themes
+    background: url(@standardBackground) top center;
+    transition: background 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);  
+    font: @font;
+    font-weight: @fontWeightNormal;
+    text-shadow: @textShadowLight;
+    color: @lightFontColor;
   }
   > div,
   #apps > div {
@@ -40,8 +41,8 @@ body {
 }
 
 @import 'actions';
-@import 'theme';
 @import 'clock';
 @import 'apps';
 @import 'mail';
 @import 'options';
+@import 'theme';
