--- a/template/option.hbs
+++ b/template/option.hbs
@@ -9,15 +9,20 @@
 </div>
 
 <hr>
-<h3>Themes</h3>
+<h1>Themes</h1>
 <div>
   <input id="{{theBeach.name}}" type="radio" name="{{theme}}" value="{{theBeach.name}}" {{#if theBeach.value}} checked="checked" {{/if}} />
   <label for="{{theBeach.name}}" class="icon-check">The Beach</label> 
 </div>
 
 <div>
-  <input id="{{bluePrint.name}}" type="radio" name="{{theme}}" value="{{bluePrint.name}}" {{#if bluePrint.value}} checked="checked" {{/if}} />
-  <label for="{{bluePrint.name}}" class="icon-check">Blueprint</label> 
+  <input id="{{bluePrintG.name}}" type="radio" name="{{theme}}" value="{{bluePrintG.name}}" {{#if bluePrintG.value}} checked="checked" {{/if}} />
+  <label for="{{bluePrintG.name}}" class="icon-check">Blueprint Grungy</label> 
+</div>
+
+<div>
+  <input id="{{bluePrintC.name}}" type="radio" name="{{theme}}" value="{{bluePrintC.name}}" {{#if bluePrintC.value}} checked="checked" {{/if}} />
+  <label for="{{bluePrintC.name}}" class="icon-check">Blueprint Clean</label> 
 </div>
 
 <div>
