--- a/less/mail.less
+++ b/less/mail.less
@@ -80,7 +80,7 @@
           li { 
             list-style: none;
             padding: 0;
-            margin: 0;
+            margin: 0.2rem 0.4rem 0 0;
             text-align: right;
 
             &:first-child strong { font-weight: @fontWeightNormal; }
