--- a/less/theme.less
+++ b/less/theme.less
@@ -1,12 +1,13 @@
 // Default themes
 
 @theBeach: "../images/beach.jpg";
-@bluePrint: "../images/blueprint.png";
+@bluePrintG: "../images/blueprint.jpg";
+@bluePrintC: "../images/blueprint.png";
 @bookeh: "../images/bookeh.jpg";
 @linenDark: "../images/dark-linen.png";
 @linenLight: "../images/light-linen.png";
 @filthyTile: "../images/filthy-tile.jpg";
-@navyBlue: "../images/navy_blue.png";
+@navyBlue: "../images/navy_blue.jpg";
 @redWine: "../images/red-blur.jpg";
 @redMesh: "../images/red-mesh.jpg";
 
@@ -47,6 +48,10 @@ body {
   // The Beach Theme
   &.theBeach { 
     background: url(@theBeach) top center;
+    .inn {
+      background-color: #54462d;
+      transition: background-color 0.8s ease;
+    }
     #clock h1,
     #mails h1 {
       font-weight: @fontWeightNormal;
@@ -55,9 +60,27 @@ body {
     }
   }
 
-  // Blueprint Theme
-  &.blueprint { 
-    background: url(@bluePrint) top center;
+  // Blueprint Grungy Theme
+  &.blueprintG { 
+    background: url(@bluePrintG) top center;
+    .inn {
+      background-color: #063457;
+      transition: background-color 0.8s ease;
+    }
+    #clock h1,
+    #mails h1 {
+      color: @lightFontColor;
+      text-shadow: @textShadowLight;
+    }
+  }
+
+  // Blueprint Clean Theme
+  &.blueprintC { 
+    background: url(@bluePrintC) top center;
+    .inn {
+      background-color: #063457;
+      transition: background-color 0.8s ease;
+    }
     #clock h1,
     #mails h1 {
       color: @lightFontColor;
@@ -68,6 +91,10 @@ body {
   // Bookeh Theme
   &.bookeh { 
     background: url(@bookeh) top center;
+    .inn {
+      background-color: #0e2524;
+      transition: background-color 0.8s ease;
+    }
     #clock h1,
     #mails h1 {
       font-weight: @fontWeightNormal;
@@ -79,6 +106,10 @@ body {
   // Dark Linen Theme
   &.linenDark { 
     background: url(@linenDark) top center;
+    .inn {
+      background-color: #1a1a1a;
+      transition: background-color 0.8s ease;
+    }
     font-weight: 100;
     #clock h1,
     #mails h1 {
@@ -90,16 +121,10 @@ body {
   // Light Linen Theme
   &.linenLight { 
     background: url(@linenLight) top center;
-    #clock h1,
-    #mails h1 {
-      color: @darkFontColor;
-      text-shadow: @textShadowLight;
+    .inn {
+      background-color: #333;
+      transition: background-color 0.8s ease;
     }
-  }
-
-  // Light Linen Theme
-  &.linenLight { 
-    background: url(@linenLight) top center;
     #clock h1,
     #mails h1 {
       color: @darkFontColor;
@@ -110,6 +135,16 @@ body {
   // Filthy Tile Theme
   &.filthyTile { 
     background: url(@filthyTile) top center;
+    .inn { 
+      background-color: #0d0e09;
+      transition: background-color 0.8s ease;
+    }
+    #clock { background-color: rgba(0,0,0,0.5);
+      .flip-clock-wrapper { 
+        background-color: rgba(54,53,47,0.2);
+        transition: background-color 0.8s ease;
+      }
+    }
     #clock h1,
     #mails h1 {
       font-weight: @fontWeightNormal;
@@ -121,12 +156,9 @@ body {
   // Navy Blue Theme
   &.navyBlue { 
     background: url(@navyBlue) top center;
-    #clock .flip-clock-wrapper ul li a div div.inn {
-      background-color: red !important;
-    }
-
-    #clock .flip-clock-wrapper ul li a div div.inn {
-      font-size: 19rem;
+    .inn {
+      background-color: #35383d;
+      transition: background-color 0.8s ease;
     }
     #clock h1,
     #mails h1 {
@@ -138,6 +170,10 @@ body {
   // Red Wine Theme
   &.redWine { 
     background: url(@redWine) top center;
+    .inn {
+      background-color: #1f0d06;
+      transition: background-color 0.8s ease;
+    }
     #clock h1,
     #mails h1 {
       color: @lightFontColor;
@@ -148,6 +184,10 @@ body {
   // Red Mesh Theme
   &.redMesh { 
     background: url(@redMesh) top center;
+    .inn {
+      background-color: #191513;
+      transition: background-color 0.8s ease;
+    }
     #clock h1,
     #mails h1 {
       font-weight: @fontWeightNormal;
