Minor changes in options menu and updated "Blueprint Grungy" BG

--- a/template/option.hbs
+++ b/template/option.hbs
@@ -1,14 +1,3 @@
-<div>
-  <input id="{{darkFont.name}}" type="checkbox" name="{{darkFont.name}}" value="{{darkFont.name}}" {{#if darkFont.value}} checked="checked" {{/if}} />
-  <label for="{{darkFont.name}}" class="icon-check">Use dark font color</label>
-</div>
-
-<div>
-  <input id="{{grayApps.name}}" type="checkbox" name="{{grayApps.name}}" value="{{grayApps.name}}" {{#if grayApps.value}} checked="checked" {{/if}} />
-  <label for="{{grayApps.name}}" class="icon-check">Use grayscaled app icons</label> 
-</div>
-
-<hr>
 <h1>Themes</h1>
 <div>
   <input id="{{theBeach.name}}" type="radio" name="{{theme}}" value="{{theBeach.name}}" {{#if theBeach.value}} checked="checked" {{/if}} />
@@ -17,7 +6,7 @@
 
 <div>
   <input id="{{bluePrintG.name}}" type="radio" name="{{theme}}" value="{{bluePrintG.name}}" {{#if bluePrintG.value}} checked="checked" {{/if}} />
-  <label for="{{bluePrintG.name}}" class="icon-check">Blueprint Grungy</label> 
+  <label for="{{bluePrintG.name}}" class="icon-c heck">Blueprint Grungy</label> 
 </div>
 
 <div>
@@ -58,4 +47,16 @@
 <div>
   <input id="{{redMesh.name}}" type="radio" name="{{theme}}" value="{{redMesh.name}}" {{#if redMesh.value}} checked="checked" {{/if}} />
   <label for="{{redMesh.name}}" class="icon-check">Red Mesh</label> 
+</div>
+
+<hr>
+<h2>Theme Options</h2>
+<div>
+  <input id="{{darkFont.name}}" type="checkbox" name="{{darkFont.name}}" value="{{darkFont.name}}" {{#if darkFont.value}} checked="checked" {{/if}} />
+  <label for="{{darkFont.name}}" class="icon-check">Use dark font color</label>
+</div>
+
+<div>
+  <input id="{{grayApps.name}}" type="checkbox" name="{{grayApps.name}}" value="{{grayApps.name}}" {{#if grayApps.value}} checked="checked" {{/if}} />
+  <label for="{{grayApps.name}}" class="icon-check">Use grayscaled app icons</label> 
 </div>
