--- a/css/main.css
+++ b/css/main.css
@@ -353,8 +353,8 @@ body a {
   position: absolute;
   left: calc(50% - 175px);
   top: -110%;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e6e6e6));
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.4);
+  background: -webkit-gradient(linear, left top, left bottom, from(#d2d2d2), to(#f0f0f0));
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4);
   border-radius: 0 0 6px 6px;
   transform: translateY(-110%);
   transition: transform 0.5s ease-out;
@@ -374,11 +374,15 @@ body a {
 #options.show {
   transform: translateY(0%);
 }
-#options h1 {
+#options h1,
+#options h2 {
   font-size: 1.75rem;
   color: #999;
   margin: 0.25rem;
   text-shadow: none;
+}
+#options h2 {
+  font-size: 1.25rem;
 }
 #options label {
   cursor: pointer;
