--- a/less/options.less
+++ b/less/options.less
@@ -3,8 +3,8 @@
   position: absolute;
   left: calc(~"50% - 175px");
   top: -110%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgb(255,255,255)), to(rgb(230,230,230)));
-  box-shadow: 0px 3px 6px @shadowColor;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgb(210,210,210)), to(rgb(240,240,240)));
+  box-shadow: 0px 3px 10px @shadowColor;
   border-radius: 0 0 @borderRadius @borderRadius;
   transform: translateY(-110%);
   transition: transform .5s ease-out;
@@ -20,11 +20,14 @@
 
   &.show { transform: translateY(0%); }
 
-  h1 { 
+  h1, h2 { 
     font-size: 1.75rem; 
     color: #999; 
     margin: 0.25rem;
     text-shadow: none;
+  }
+  h2 {
+    font-size: 1.25rem;
   }
 
   label {
