--- a/template/option.hbs
+++ b/template/option.hbs
@@ -10,10 +10,10 @@
 <h2>Theme Options</h2>
 <div>
   <input id="{{darkFont.name}}" type="checkbox" name="{{darkFont.name}}" value="{{darkFont.name}}" {{#if darkFont.value}} checked="checked" {{/if}} />
-  <label for="{{darkFont.name}}" class="icon-check">Use dark font color</label>
+  <label for="{{darkFont.name}}" class="icon-check">use dark font color</label>
 </div>
 
 <div>
   <input id="{{grayApps.name}}" type="checkbox" name="{{grayApps.name}}" value="{{grayApps.name}}" {{#if grayApps.value}} checked="checked" {{/if}} />
-  <label for="{{grayApps.name}}" class="icon-check">Use grayscaled app icons</label> 
+  <label for="{{grayApps.name}}" class="icon-check">use grayscaled app icons</label> 
 </div>
