--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
 }
 [class^="icon-"]:hover:before,
 [class*=" icon-"]:hover:before {
-  color: #9d9d9d;
+  color: #ffffff;
 }
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
@@ -37,7 +37,7 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   transition: color 0.5s ease;
-  color: #dddddd;
+  color: #cccccc;
 }
 .icon-thumbs-up:before {
   content: "\e000";
@@ -71,21 +71,6 @@ body {
   text-align: center;
   -webkit-font-smoothing: antialiased;
   font-size: 62.5%;
-  transition: color 0.8s ease;
-}
-body > #wrapper {
-  position: absolute;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  top: 0;
-  bottom: 0;
-  background: url("../images/light-linen.png") top center;
-  transition: background 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  font: normal 11px "Lato", sans-serif;
-  font-weight: 300;
-  text-shadow: 0 0.1rem 0.2rem #111111;
-  color: #dddddd;
 }
 body > div,
 body #apps > div {
@@ -93,12 +78,13 @@ body #apps > div {
   margin: 0 auto;
 }
 body a {
-  color: #dddddd;
+  color: #cccccc;
   text-decoration: none;
   font-size: 1rem;
 }
+body,
 body h1 {
-  transition: color 0.5s ease;
+  transition: color 0.8s ease;
 }
 #actions {
   position: absolute;
@@ -130,6 +116,11 @@ body h1 {
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
 }
+#clock,
+#clock .flip-clock-wrapper,
+#clock div.inn {
+  transition: background-color 0.8s ease;
+}
 #clock h1 {
   position: absolute;
   top: -4.8rem;
@@ -151,7 +142,7 @@ body h1 {
   top: 1.75rem;
 }
 #clock .flip-clock-wrapper .flip-clock-divider .flip-clock-dot {
-  background-color: #dddddd;
+  background-color: #cccccc;
 }
 #clock .flip-clock-wrapper ul {
   font: normal 11px "Lato", sans-serif;
@@ -160,7 +151,7 @@ body h1 {
   height: 9rem;
   font-size: 10rem;
   line-height: 8.7rem;
-  color: #dddddd;
+  color: #cccccc;
 }
 #clock .flip-clock-wrapper ul li a {
   cursor: default;
@@ -260,7 +251,7 @@ body h1 {
   margin-left: 0.5rem;
   display: inline-block;
   position: absolute;
-  -webkit-animation: moveThumps 0.5s ease 1 alternate;
+  -webkit-animation: moveThumps 1s ease 1 alternate;
 }
 @-webkit-keyframes moveThumps {
   0% {
@@ -392,7 +383,7 @@ body h1 {
   position: relative;
   line-height: 2rem;
   padding-left: 2rem;
-  color: #333333;
+  color: #444444;
 }
 #options label:after,
 #options label:before {
@@ -412,7 +403,7 @@ body h1 {
 }
 #options label:before {
   opacity: 0;
-  color: #dddddd;
+  color: #cccccc;
   z-index: 20;
   font-size: 1.25rem;
   transition: opacity 0.5s ease;
@@ -425,105 +416,134 @@ body h1 {
 #options input:checked + label:before {
   opacity: 1;
 }
-body.dark h1,
-body.dark h1 + p {
-  color: #333333 !important;
-}
-body.light h1,
-body.light h1 + p {
-  color: #dddddd !important;
-}
-#wrapper {
+body {
   transition: background 0.8s ease;
   background-position: top center;
-}
-#wrapper.reset {
-  background: url("../images/light-linen.png") top center;
-  transition: background 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  background: url("../images/light-linen.png");
   font: normal 11px "Lato", sans-serif;
   font-weight: 300;
-  text-shadow: 0 0.1rem 0.2rem #111111;
-  color: #dddddd;
+  text-shadow: 0 0.1rem 0.2rem #333333;
+  color: #cccccc;
 }
-#wrapper.theBeach {
-  background: url("../images/beach.jpg") top center;
+body h1,
+body h1 + p {
+  color: #cccccc;
 }
-#wrapper.theBeach .inn {
+body.dark h1,
+body.dark h1 + p {
+  color: #444444;
+}
+body.theBeach {
+  background: url("../images/beach.jpg");
+}
+body.theBeach #clock {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+body.theBeach #clock .flip-clock-wrapper {
+  background-color: rgba(15, 15, 15, 0.5);
+}
+body.theBeach #clock .flip-clock-wrapper ul li a div div.inn {
   background-color: #54462d;
-  transition: background-color 0.8s ease;
 }
-#wrapper.blueprintG {
-  background: url("../images/blueprint.jpg") top center;
+body.bluePrintGrungy #clock,
+body.bluePrintClean #clock {
+  background-color: rgba(0, 0, 0, 0.2);
 }
-#wrapper.blueprintG .inn {
+body.bluePrintGrungy #clock .flip-clock-wrapper,
+body.bluePrintClean #clock .flip-clock-wrapper {
+  background-color: rgba(15, 15, 15, 0.5);
+}
+body.bluePrintGrungy #clock .flip-clock-wrapper ul li a div div.inn,
+body.bluePrintClean #clock .flip-clock-wrapper ul li a div div.inn {
   background-color: #063457;
-  transition: background-color 0.8s ease;
 }
-#wrapper.blueprintG #clock h1,
-#wrapper.blueprintG #mails h1 {
-  color: #dddddd;
-  text-shadow: 0 0.1rem 0.2rem #111111;
+body.bluePrintGrungy {
+  background: url("../images/blueprint.jpg");
 }
-#wrapper.blueprintC {
-  background: url("../images/blueprint.png") top center;
+body.bluePrintClean {
+  background: url("../images/blueprint.png");
 }
-#wrapper.blueprintC .inn {
-  background-color: #063457;
-  transition: background-color 0.8s ease;
+body.bookeh {
+  background: url("../images/bookeh.jpg");
 }
-#wrapper.bookeh {
-  background: url("../images/bookeh.jpg") top center;
+body.bookeh #clock {
+  background-color: rgba(0, 0, 0, 0.2);
 }
-#wrapper.bookeh .inn {
+body.bookeh #clock .flip-clock-wrapper {
+  background-color: rgba(15, 15, 15, 0.5);
+}
+body.bookeh #clock .flip-clock-wrapper ul li a div div.inn {
   background-color: #0e2524;
-  transition: background-color 0.8s ease;
 }
-#wrapper.linenDark {
-  background: url("../images/dark-linen.png") top center;
+body.linenDark {
+  background: url("../images/dark-linen.png");
 }
-#wrapper.linenDark .inn {
+body.linenDark #clock {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+body.linenDark #clock .flip-clock-wrapper {
+  background-color: rgba(15, 15, 15, 0.5);
+}
+body.linenDark #clock .flip-clock-wrapper ul li a div div.inn {
   background-color: #1a1a1a;
-  transition: background-color 0.8s ease;
 }
-#wrapper.linenLight {
-  background: url("../images/light-linen.png") top center;
+body.linenLight {
+  background: url("../images/light-linen.png");
 }
-#wrapper.linenLight .inn {
-  background-color: #333;
-  transition: background-color 0.8s ease;
+body.linenLight #clock {
+  background-color: rgba(0, 0, 0, 0.2);
 }
-#wrapper.filthyTile {
-  background: url("../images/filthy-tile.jpg") top center;
+body.linenLight #clock .flip-clock-wrapper {
+  background-color: rgba(15, 15, 15, 0.5);
 }
-#wrapper.filthyTile .inn {
-  background-color: #0d0e09;
-  transition: background-color 0.8s ease;
+body.linenLight #clock .flip-clock-wrapper ul li a div div.inn {
+  background-color: #333333;
 }
-#wrapper.filthyTile #clock {
+body.filthyTile {
+  background: url("../images/filthy-tile.jpg");
+}
+body.filthyTile #clock {
   background-color: rgba(0, 0, 0, 0.5);
 }
-#wrapper.filthyTile #clock .flip-clock-wrapper {
+body.filthyTile #clock .flip-clock-wrapper {
   background-color: rgba(54, 53, 47, 0.2);
-  transition: background-color 0.8s ease;
 }
-#wrapper.navyBlue {
-  background: url("../images/navy_blue.jpg") top center;
+body.filthyTile #clock .flip-clock-wrapper ul li a div div.inn {
+  background-color: #0d0e09;
 }
-#wrapper.navyBlue .inn {
+body.navyBlue {
+  background: url("../images/navy_blue.jpg");
+}
+body.navyBlue #clock {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+body.navyBlue #clock .flip-clock-wrapper {
+  background-color: rgba(15, 15, 15, 0.5);
+}
+body.navyBlue #clock .flip-clock-wrapper ul li a div div.inn {
   background-color: #35383d;
-  transition: background-color 0.8s ease;
 }
-#wrapper.redWine {
-  background: url("../images/red-blur.jpg") top center;
+body.redWine {
+  background: url("../images/red-blur.jpg");
 }
-#wrapper.redWine .inn {
+body.redWine #clock {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+body.redWine #clock .flip-clock-wrapper {
+  background-color: rgba(15, 15, 15, 0.5);
+}
+body.redWine #clock .flip-clock-wrapper ul li a div div.inn {
   background-color: #1f0d06;
-  transition: background-color 0.8s ease;
 }
-#wrapper.redMesh {
-  background: url("../images/red-mesh.jpg") top center;
+body.redMesh {
+  background: url("../images/red-mesh.jpg");
 }
-#wrapper.redMesh .inn {
+body.redMesh #clock {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+body.redMesh #clock .flip-clock-wrapper {
+  background-color: rgba(15, 15, 15, 0.5);
+}
+body.redMesh #clock .flip-clock-wrapper ul li a div div.inn {
   background-color: #191513;
-  transition: background-color 0.8s ease;
 }
