--- a/less/font.less
+++ b/less/font.less
@@ -36,7 +36,7 @@
 
 [class^="icon-"],
 [class*=" icon-"] {
-  &:hover:before { color: darken(@lightFontColor, 25%); }
+  &:hover:before { color: lighten(@lightFontColor, 25%); }
   &:before {
     font-family: "yantre";
     font-style: normal;
