--- a/less/main.less
+++ b/less/main.less
@@ -10,29 +10,7 @@ body {
   text-align: center;
   -webkit-font-smoothing: antialiased;
   font-size: 62.5%;
-  transition: color 0.8s ease;
 
-  // font: @font;
-  // font-weight: @fontWeightNormal;
-  // text-shadow: @textShadowLight;
-  // color: @lightFontColor;
-
-  > #wrapper {
-    position: absolute;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    top: 0;
-    bottom: 0;
-    // these style have to be applied when reseting the themes
-    background: url(@standardBackground) top center;
-    transition: background 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);  
-    font: @font;
-    font-weight: @fontWeightNormal;
-    text-shadow: @textShadowLight;
-    color: @lightFontColor;
-  }
-  
   > div,
   #apps > div {
     width: 1024px;
@@ -45,7 +23,8 @@ body {
     font-size: 1rem;
   }
 
-  h1 { transition: color 0.5s ease; }
+  &,
+  h1 { transition: color 0.8s ease; }
 }
 
 @import 'actions';
