--- a/less/variables.less
+++ b/less/variables.less
@@ -1,19 +1,3 @@
-// @shadowColor: rgba(0, 0, 0, 0.4);
-//@font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
-
-//theme backgrounds
-@theme_path: '../images/';
-@theBeach: "@{theme_path}beach.jpg";
-@bluePrint: "@{theme_path}blueprint.png";
-@bookeh: "@{theme_path}bookeh.jpg";
-@linenDark: "@{theme_path}dark-linen.png";
-@linenLight: "@{theme_path}light-linen.png";
-@filthyTile: "@{theme_path}filthy-tile.jpg";
-@greyWash: "@{theme_path}grey_wash_wall.png";
-@navyBlue: "@{theme_path}navy_blue.png";
-@redWine: "@{theme_path}red-blur.jpg";
-@redMesh: "@{theme_path}red-mesh.jpg";
-
 @font: normal 11px "Lato", sans-serif;
 @fontWeightLight: 100;
 @fontWeightNormal: 300;
@@ -33,3 +17,19 @@
 @textShadowDark: 0 0 0.5rem #333;
 @lightFontColor: #ccc;
 @darkFontColor: #444;
+
+@clockDefaultBackgroundColor: rgba(0,0,0,0.2);
+@clockWrapperDefaultBackgroundColor: rgba(15,15,15,0.5);
+
+// ------------------------------------------ theme backgrounds
+@theme_path: '../images/';
+@theBeach: "@{theme_path}beach.jpg";
+@bluePrintGrungy: "@{theme_path}blueprint.jpg";
+@bluePrintClean: "@{theme_path}blueprint.png";
+@bookeh: "@{theme_path}bookeh.jpg";
+@linenDark: "@{theme_path}dark-linen.png";
+@linenLight: "@{theme_path}light-linen.png";
+@filthyTile: "@{theme_path}filthy-tile.jpg";
+@navyBlue: "@{theme_path}navy_blue.jpg";
+@redWine: "@{theme_path}red-blur.jpg";
+@redMesh: "@{theme_path}red-mesh.jpg";
