added heigth for apps and clock and max width for content

--- a/less/clock.less
+++ b/less/clock.less
@@ -4,6 +4,7 @@
   margin: 4rem auto 1rem;
   background-color: @clockDefaultBackgroundColor;
   position: relative;
+  height: 240px;
 
   &,
   .flip-clock-wrapper,
