--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,7 @@ body > div,
 body #apps > div {
   width: 1024px;
   margin: 0 auto;
+  max-width: 1024px !important;
 }
 body a {
   color: #cccccc;
@@ -115,6 +116,7 @@ body h1 {
   margin: 4rem auto 1rem;
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
+  height: 240px;
 }
 #clock,
 #clock .flip-clock-wrapper,
@@ -172,6 +174,7 @@ body h1 {
   padding-bottom: 0.7rem;
   margin: 20px 0 0 0;
   bottom: -11px;
+  height: 110px;
 }
 #apps .bx-wrapper .bx-viewport {
   background: none;
