--- a/less/variables.less
+++ b/less/variables.less
@@ -21,6 +21,8 @@
 @clockDefaultBackgroundColor: rgba(0,0,0,0.2);
 @clockWrapperDefaultBackgroundColor: rgba(15,15,15,0.5);
 
+@minHeight: 600px;
+
 // ------------------------------------------ theme backgrounds
 @theme_path: '../images/';
 @theBeach: "@{theme_path}beach.jpg";
