--- a/less/main.less
+++ b/less/main.less
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  min-height: 600px;
+  min-height: @minHeight;
   text-align: center;
   -webkit-font-smoothing: antialiased;
   font-size: 62.5%;
