--- a/less/theme.less
+++ b/less/theme.less
@@ -10,9 +10,10 @@
 
 body { 
   // transition: background 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: background 0.8s ease;
+  &.transition { transition: background 0.8s ease; } 
   background-position: top center;
-  background: url(@standardBackground);
+  background-color: #333;
+  // background: url(@standardBackground);
   font: @font;
   font-weight: @fontWeightNormal;
   text-shadow: @textShadowLight;
