--- a/less/actions.less
+++ b/less/actions.less
@@ -11,10 +11,4 @@
   }
 }
 
-#options_btn:hover {
-  -webkit-animation: spin 3s linear infinite;
-  @-webkit-keyframes spin { 
-    0% { transform: rotate(0deg); } 
-    100% { transform: rotate(359deg); } 
-  }
-}
+#options_btn:hover { -webkit-animation: spin 3s linear infinite; }
