--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,11 @@
 @charset "UTF-8";
 @import 'variables';
+@import 'animations';
 @import 'font';
+
+html {
+  overflow: hidden;
+}
 
 body {
   margin: 0;
