--- a/less/mail.less
+++ b/less/mail.less
@@ -4,6 +4,12 @@
   overflow: auto;
   width: 858px;
 
+  > i { 
+    font-size: 5rem;
+    margin-top: 3rem;
+    display: inline-block;
+  }
+
   .read {
     h1 { padding-right: 3.5rem; }
     i { 
@@ -11,11 +17,6 @@
       display: inline-block;
       position: absolute;
       -webkit-animation: moveThumps 1s ease 1 alternate;
-      @-webkit-keyframes moveThumps { 
-        0% { transform: scale(1); } 
-        50% { transform: scale(2); }
-        100% { transform: scale(1); } 
-      }
     }
     p {
       font-size: 1.5rem;
