--- a/less/theme.less
+++ b/less/theme.less
@@ -10,10 +10,12 @@
 
 body { 
   // transition: background 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  &.transition { transition: background 0.8s ease; } 
+  &.transition { 
+    transition: background 0.8s ease; 
+    i.loader { -webkit-animation: spinReverse 2s linear infinite; }
+  } 
   background-position: top center;
   background-color: #333;
-  // background: url(@standardBackground);
   font: @font;
   font-weight: @fontWeightNormal;
   text-shadow: @textShadowLight;
