optimized loading animation for mails

--- a/less/animations.less
+++ b/less/animations.less
@@ -15,6 +15,11 @@
 }
 
 @-webkit-keyframes hideOnStart { 
-  from { right: -110%; } 
-  to { right: 0; } 
+  0% { right: -110%; } 
+  100% { right: 0; } 
+}
+
+@-webkit-keyframes fadeIn {
+  0% { opacity:0; }
+  100%{ opacity:1; }
 }
