--- a/css/main.css
+++ b/css/main.css
@@ -27,11 +27,19 @@
   }
 }
 @-webkit-keyframes hideOnStart {
-  from {
+  0% {
     right: -110%;
   }
-  to {
+  100% {
     right: 0;
+  }
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 @font-face {
@@ -288,9 +296,10 @@ body h1 {
 }
 #mails .read i {
   margin-left: 0.5rem;
+  margin-top: 0.35rem;
   display: inline-block;
   position: absolute;
-  -webkit-animation: moveThumps 1s ease 1 alternate;
+  -webkit-animation: moveThumps 1s ease 0.25s alternate;
 }
 #mails .read p {
   font-size: 1.5rem;
@@ -316,6 +325,7 @@ body h1 {
   padding: 0;
 }
 #mails .unread + ul > li {
+  -webkit-animation: fadeIn 1s linear;
   list-style: none;
   margin: 0.25rem;
   background: rgba(0, 0, 0, 0.4);
