--- a/less/mail.less
+++ b/less/mail.less
@@ -14,9 +14,10 @@
     h1 { padding-right: 3.5rem; }
     i { 
       margin-left: 0.5rem; 
+      margin-top: 0.35rem;
       display: inline-block;
       position: absolute;
-      -webkit-animation: moveThumps 1s ease 1 alternate;
+      -webkit-animation: moveThumps 1s ease 0.25s alternate;
     }
     p {
       font-size: 1.5rem;
@@ -44,6 +45,7 @@
     padding: 0;
 
     > li {
+      -webkit-animation: fadeIn 1s linear;
       list-style: none;
       margin: 0.25rem;
       background: @shadowColor;
