integrate option icons

--- a/less/font.less
+++ b/less/font.less
@@ -57,3 +57,6 @@
 .icon-check:before { content: "\e003"; }
 .icon-store:before { content: "\e005"; }
 .icon-default:before { content: "\e004"; }
+.icon-background:before { content: "\e009"; }
+.icon-tools:before { content: "\e00a"; }
+.icon-info:before { content: "\e00b"; }
